src/test/ui/consts/miri_unleashed/abi-mismatch.stderr
warning: skipping const checks
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^^^

warning: skipping const checks
  --> $DIR/abi-mismatch.rs:17:40
   |
LL | static VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: could not evaluate static initializer
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^^^
   |     |
   |     calling a function with ABI C using caller ABI Rust
   |     inside `call_rust_fn` at $DIR/abi-mismatch.rs:10:5
...
LL | static VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   |                  --------------------------------------------------------------------- inside `VAL` at $DIR/abi-mismatch.rs:17:18

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
